Fiksa pos på trappa og buskene

--- a/css/Lego-Land.css
+++ b/css/Lego-Land.css
@@ -39,14 +39,18 @@ body{
 
 .stairsContainer{
     position: absolute;
-    bottom: -26vh;
-    z-index:3;
-    z-index: 9; 
+    display: flex;
+    justify-content: center;
+    top: 111%;
+    left: 39.8%;
+    z-index: 2; 
+    border: 3px solid red;
+    width: 20%;
+    height: 30%;
 }
 
 .stairs{
     height: 20vh;
-    width: 40vw;
     transform: rotate(-90deg);
     border-radius: 5px;
 }
@@ -138,8 +142,9 @@ body{
     left: 50%;
     opacity: 0;
     transition-property: all;
-    transition-timing-function: ease-in-out;
+    transition-timing-function: ease-in;
     transition-duration: .6s;
+    z-index: 2;
 }
 
 /*Merry Christmas speechbubble animation*/
@@ -374,24 +379,24 @@ body{
 /*---------------------------------------------------------------------------------------*/
 
 .bushContainer{
-    position: relative;
+    position: absolute;
     display: flex;
     justify-content: space-between;
-    top: 65vh;
+    top: 75vh;
     height: 100vh;
-    width: 30vw;    
+    width: 20vw;    
     z-index: 2;
 }
 
 .bush{
     height: 10vh;
-    padding: 10vh;
     top: 0;
     animation-name: jump;
     animation-timing-function: ease-in;
     animation-duration: 1s;
     animation-delay: 3s;
 }
+
 
 /*Bush jump animation*/
 /*---------------------------------------------------------------------------------------*/
@@ -417,6 +422,35 @@ body{
     }
 }
 
+/*Sign styling*/
+/*---------------------------------------------------------------------------------------*/
+
+.signContainer{
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    z-index: 1;
+    bottom: 27%;
+    left: 11.4%;
+
+}
+
+.sign{
+    width: 12vw;
+    height: 25vh;
+}
+
+/*Sign link styling*/
+a{
+    position: absolute;
+    left: 14.4%;
+    bottom: 41%;
+    z-index: 3;
+    font-size: 2vh;
+    color: black;
+    text-decoration: none;
+    font-weight: 800;
+}
 
 
 
