--- a/css/LEGO-City.css
+++ b/css/LEGO-City.css
@@ -1,303 +1,322 @@
-body{
-	overflow: hidden;
+/*Body ------------------------------------------------------------*/
+	body{
+		overflow: hidden;
+	}
+/*-----------------------------------------------------------------*/
 
-}
-
-#container {
-	position: relative;
-	height: 100vh;
-	width: 100vw;
-}
-#nightsky{
-	position: absolute;
-	height: 100vh;
-	width: 100vw;
-}
-
-#city{
-	position: absolute;
-	height: 100vh;
-	width: 100vw;
-}
-#city>*{
-	position: absolute;
-}
-#road {
-	z-index: 3;
-	display: flex;
-	justify-content: center;
-	top: 64.7%;
-	left: -20%;
-	width:150vw;
-	height: 40vh;
-}
-#house1 {
-	z-index: 6;
-	display: flex;
-	justify-content: center;
-	top: -20%;
-	right: 26.2%;
-	width:20vw;
-	height: 85vh;
+/*Main Container --------------------------------------------------*/
+	#container {
+		position: relative;
+		height: 100vh;
+		width: 100vw;
 	}
 
-#house2 {
-	z-index: 6;
-	display: flex;
-	justify-content: center;
-	top: -20%;
-	right: 7.5%;
-	width:20vw;
-	height: 85vh;
-	}
+	/* Wallpaper */
+	/*-----------------------------------------------------------------*/
+		#nightsky{
+			position: absolute;
+			height: 100vh;
+			width: 100vw;
+		}
+	/*-----------------------------------------------------------------*/
 
-#house3 {
-	z-index: 6;
-	display: flex;
-	justify-content: center;
-	top: -20%;
-	right: -11%;
-	width:20vw;
-	height: 85vh;
-	}
-#house4 {
-	z-index: 5;
-	display: flex;
-	justify-content: center;
-	top: 5%;
-	right: 42%;
-	width:60vw;
-	height: 60vh;
-	}
+	/* City */
+	/*-----------------------------------------------------------------*/
+		#city{
+			position: absolute;
+			height: 100vh;
+			width: 100vw;
+		}
+		#city>*{
+			position: absolute;
+		}
+		#road {
+			z-index: 3;
+			display: flex;
+			justify-content: center;
+			top: 64.7%;
+			left: -20%;
+			width:150vw;
+			height: 40vh;
+		}
+		#house1 {
+			z-index: 6;
+			display: flex;
+			justify-content: center;
+			top: -20%;
+			right: 26.2%;
+			width:20vw;
+			height: 85vh;
+		}
 
-#balconyWoman {
-	z-index: 4;
-	display: flex;
-	justify-content: center;
-	top: 12.5%;
-	right: 75.85%;
-	width:2.5vw;
-	height: 5vh;
-	animation: woman 2s linear infinite;
-	}
+		#house2 {
+			z-index: 6;
+			display: flex;
+			justify-content: center;
+			top: -20%;
+			right: 7.5%;
+			width:20vw;
+			height: 85vh;
+		}
 
-@keyframes woman {
-	0% {top: 12.5%;  transform: rotate(-5deg);}
-    50%{ top: 13%; transform: rotate(5deg);}
-    100% {top: 12.5%;  transform: rotate(-5deg);}
-    
-}
+		#house3 {
+			z-index: 6;
+			display: flex;
+			justify-content: center;
+			top: -20%;
+			right: -11%;
+			width:20vw;
+			height: 85vh;
+		}
+		#house4 {
+			z-index: 5;
+			display: flex;
+			justify-content: center;
+			top: 5%;
+			right: 42%;
+			width:60vw;
+			height: 60vh;
+		}
+	/*-----------------------------------------------------------------*/
 
-#lightHalo1, #lightHalo2, #lightHalo3, #lightHalo4 {
-	z-index: 6;
-	opacity: 70%;
-	width: 10vw;
-	height: 20vh;
-	display: flex;
-	justify-content: center;
+	/* Woman and city lights */
+	/*-----------------------------------------------------------------*/
+		#balconyWoman {
+			z-index: 4;
+			display: flex;
+			justify-content: center;
+			top: 12.5%;
+			right: 75.85%;
+			width:2.5vw;
+			height: 5vh;
+			animation: woman 2s linear infinite;
+		}
 
-}
+		@keyframes woman {
+			0% {top: 12.5%;  transform: rotate(-5deg);}
+			50%{ top: 13%; transform: rotate(5deg);}
+			100% {top: 12.5%;  transform: rotate(-5deg);}
+			
+		}
 
-#lightHalo1 {
-	top: 37.5%;
-	left: 2.3%;
-	animation: lightFlicker 2s running infinite;
-	animation-delay: 0.2s;
-}
+		#lightHalo1, #lightHalo2, #lightHalo3, #lightHalo4 {
+			z-index: 6;
+			opacity: 70%;
+			width: 10vw;
+			height: 20vh;
+			display: flex;
+			justify-content: center;
+			
+		}
 
-#lightHalo2 {
-	top: 37.5%;
-	left: 47.7%;
-	animation: lightFlicker 2s running infinite;
-	animation-delay: 0.9s;
-}
+		#lightHalo1 {
+			top: 37.5%;
+			left: 2.3%;
+			animation: lightFlicker 2s running infinite;
+			animation-delay: 0.2s;
+		}
 
-#lightHalo3 {
-	top: 37.5%;
-	left: 66%;
-	animation: lightFlicker 2s running infinite;
-	animation-delay: 0.3s;
-}
+		#lightHalo2 {
+			top: 37.5%;
+			left: 47.7%;
+			animation: lightFlicker 2s running infinite;
+			animation-delay: 0.9s;
+		}
 
-#lightHalo4 {
-	top: 37.5%;
-	left: 84.5%;
-	animation: lightFlicker 2s running infinite;
-	animation-delay: 0.7s;
-}
+		#lightHalo3 {
+			top: 37.5%;
+			left: 66%;
+			animation: lightFlicker 2s running infinite;
+			animation-delay: 0.3s;
+		}
 
-@keyframes lightFlicker {
-	0% {opacity: 70%;}
-	50%{opacity: 50%;}
-	100%{opacity: 79%;}
-}
+		#lightHalo4 {
+			top: 37.5%;
+			left: 84.5%;
+			animation: lightFlicker 2s running infinite;
+			animation-delay: 0.7s;
+		}
 
-.legoTaxi {
-	position: absolute;
-	z-index: 6;
-	right: -10%;
-	bottom: 19%;
-	height: 15vh;
-	width: 17vw;
-	animation: taxi 6s linear forwards;
-}
+		@keyframes lightFlicker {
+			0% {opacity: 70%;}
+			50%{opacity: 50%;}
+			100%{opacity: 79%;}
+		}
+	/*-----------------------------------------------------------------*/
 
-@keyframes taxi {
-	0% {
-		right: -10%;
-		bottom: 19%;
-	}
+	/* Taxi and lego man */
+	/*-----------------------------------------------------------------*/
+		.legoTaxi {
+			position: absolute;
+			z-index: 6;
+			right: -10%;
+			bottom: 19%;
+			height: 15vh;
+			width: 17vw;
+			animation: taxi 6s linear forwards;
+		}
 
-	100% {
-		right: 50%;
-		bottom: 19%;
-	}
-}
+		@keyframes taxi {
+			0% {
+				right: -10%;
+				bottom: 19%;
+			}
+			
+			100% {
+				right: 50%;
+				bottom: 19%;
+			}
+		}
 
-#legoMan {
-	position: absolute;
-	z-index: 5;
-	width: 1.2vw;
-	height: 12.5vh;
-	top: 54.5%;
-	left: 15%;
-	animation: legoMan 3s linear forwards;
-}
+		#legoMan {
+			position: absolute;
+			z-index: 5;
+			width: 1.2vw;
+			height: 12.5vh;
+			top: 54.5%;
+			left: 15%;
+			animation: legoMan 3s linear forwards;
+		}
 
-@keyframes legoMan {
-	0% {
-		top: 54.5%;
-		left: 15%;
-	}
-	99% {
-		opacity: 1;
-	}
-	100% {
-		opacity: 0;
-		top: 54.5%;
-		left: 40%;
-	}
-}
+		@keyframes legoMan {
+			0% {
+				top: 54.5%;
+				left: 15%;
+			}
+			99% {
+				opacity: 1;
+			}
+			100% {
+				opacity: 0;
+				top: 54.5%;
+				left: 40%;
+			}
+		}
 
-#legoManArmless {
-	position: absolute;
-	z-index: 5;
-	width: 15vw;
-	height: 20vh;
-	top: 50%;
-	left: 33%;
-	opacity: 0;
-	animation: legoManAppear 0s linear 3s forwards;
-}
-@keyframes legoManAppear{
-	0% {
-		opacity: 0;
-	}
+		#legoManArmless {
+			position: absolute;
+			z-index: 5;
+			width: 15vw;
+			height: 20vh;
+			top: 50%;
+			left: 33%;
+			opacity: 0;
+			animation: legoManAppear 0s linear 3s forwards;
+		}
+		@keyframes legoManAppear{
+			0% {
+				opacity: 0;
+			}
+			
+			100% {
+				opacity: 1;
+			}
+		}
 
-	100% {
-		opacity: 1;
-	}
-}
 
+		#legoArm {
+			position: absolute;
+			z-index: 5;
+			width: 3vw;
+			height: 13vh;
+			top: 54%;
+			left: 39.1%;
+			opacity: 0;
+			animation: armimation 0.5s linear 3s forwards
+			
+		}
 
-#legoArm {
-	position: absolute;
-	z-index: 5;
-	width: 3vw;
-	height: 13vh;
-	top: 54%;
-	left: 39.1%;
-	opacity: 0;
-	animation: armimation 0.5s linear 3s forwards
+		@keyframes armimation {
+			0%{
+				opacity: 1;
+			}
+			25% {
+				width: 3vw;
+				height: 13vh;
+				left: 38.6%;
+				top: 54.7%;
+			}
+			
+			50% {
+				width: 3vw;
+				height: 13vh;
+				left: 37.7%;
+				top: 54.3%;
+			}
+			
+			75% {
+				width: 3vw;
+				height: 13vh;
+				left: 37.3%;
+				top: 53.1%;
+			}
+			
+			100% {
+				width: 3vw;
+				height: 13vh;
+				opacity: 1;
+				transform: rotate(150deg);
+				left: 37.2%;
+				top: 52%;
+			}
+		}
+	/*-----------------------------------------------------------------*/
 
-}
+	/* Sleigh and presents */
+	/*-----------------------------------------------------------------*/
+		#sleigh {
+			z-index: 5;
+			width: 20vw;
+			height: 20vh;
+			transform: rotateY(180deg);
+			animation: moveSleigh 2s linear forwards;
+		}
 
-@keyframes armimation {
-	0%{
-		opacity: 1;
-	}
-	25% {
-		width: 3vw;
-		height: 13vh;
-		left: 38.6%;
-		top: 54.7%;
-	}
+		@keyframes moveSleigh {
+			0% {
+				top: -50%;
+				right: 45%;
+				transform: rotateY(180deg) rotate(-20deg);
+			}
+			
+			100% {
+				top: 3.5%;
+				left: 30%;
+				transform: rotate(0deg) rotateY(180deg);
+			}
+		}
+		#present {
+			z-index: 5;
+			width: 3vw;
+			height: 5vh;
+			opacity: 0;
+			animation-name: presentAni;
+			animation-play-state: paused;
+			animation-duration: 0.5s;
+			animation-iteration-count: 1;
+			animation-fill-mode: forwards;
+			animation-timing-function:linear;
+		}
 
-	50% {
-		width: 3vw;
-		height: 13vh;
-		left: 37.7%;
-		top: 54.3%;
-	}
+		#sleigh:hover + #present {
+			animation-play-state: running;
+		}
 
-	75% {
-		width: 3vw;
-		height: 13vh;
-		left: 37.3%;
-		top: 53.1%;
-	}
-
-	100% {
-		width: 3vw;
-		height: 13vh;
-		opacity: 1;
-		transform: rotate(150deg);
-		left: 37.2%;
-		top: 52%;
-	}
-}
-
-#sleigh {
-	z-index: 5;
-	width: 20vw;
-	height: 20vh;
-	transform: rotateY(180deg);
-	animation: moveSleigh 2s linear forwards;
-}
-
-@keyframes moveSleigh {
-	0% {
-		top: -50%;
-		right: 45%;
-		transform: rotateY(180deg) rotate(-20deg);
-	}
-	
-	100% {
-		top: 3.5%;
-		left: 30%;
-		transform: rotate(0deg) rotateY(180deg);
-	}
-}
-#present {
-	z-index: 5;
-	width: 3vw;
-	height: 5vh;
-    opacity: 0;
-    animation-name: presentAni;
-	animation-play-state: paused;
-    animation-duration: 0.5s;
-    animation-iteration-count: 1;
-    animation-fill-mode: forwards;
-    animation-timing-function:linear;
-}
-
-#sleigh:hover + #present {
-    animation-play-state: running;
-}
-
-@keyframes presentAni {
-	0%{
-		opacity:0;
-		left: 32%;
-		top: 9%;}
-
-	5% {
-		opacity: 1;
-	}
-
-	100% {
-		opacity: 1;
-		left: 38%;
-		top: 53%
-	}
-}
+		@keyframes presentAni {
+			0%{
+				opacity:0;
+				left: 32%;
+				top: 9%;}
+				
+				5% {
+					opacity: 1;
+				}
+				
+				100% {
+					opacity: 1;
+					left: 38%;
+					top: 53%
+				}
+			}
+	/*-----------------------------------------------------------------*/
+/*-----------------------------------------------------------------*/
