--- a/css/Globe.css
+++ b/css/Globe.css
@@ -4,7 +4,8 @@
     }
 /*-----------------------------------------------------------------*/
 
-/*Santa's House----------------------------------------------------*/
+/* Santa's House */
+/*-----------------------------------------------------------------*/
     #santasHouse {
         position: absolute;
         justify-content: center;
@@ -26,7 +27,8 @@
     }
 /*-----------------------------------------------------------------*/
 
-/*The World -------------------------------------------------------*/
+/* The World */
+/*-----------------------------------------------------------------*/
     #earthSection {
         position: absolute;
         justify-content: center;
@@ -65,7 +67,8 @@
     }
 /*-----------------------------------------------------------------*/
 
-/*Moon ------------------------------------------------------------*/
+/* Moon */
+/*-----------------------------------------------------------------*/
     .moon img {
         position: absolute;
         z-index: 3;
@@ -88,7 +91,8 @@
     }
 /*-----------------------------------------------------------------*/
 
-/*Rocket ----------------------------------------------------------*/
+/* Rocket */
+/*-----------------------------------------------------------------*/
     #spaceshuttle> * {
         position: absolute;
     }
@@ -122,7 +126,8 @@
     }
 /*-----------------------------------------------------------------*/
 
-/*Spacemen --------------------------------------------------------*/
+/* Rocket */
+/*-----------------------------------------------------------------*/
     #spacemen> * {
         position: absolute;
         z-index: 4;
@@ -228,7 +233,8 @@
     }
 /*---------------------------------------------------------------------*/
 
-/*Extraterrestrial ----------------------------------------------------*/
+/* Extraterrestrial */
+/*---------------------------------------------------------------------*/
     #extraterrestrialSection> * {
         position: absolute;
     }
@@ -361,7 +367,8 @@
     }
 /*---------------------------------------------------------------------*/
 
-/*Santa's Sleigh ------------------------------------------------------*/
+/* Extraterrestrial */
+/*------------------------------------------------------*/
     #santaSleigh {
         position: relative;
         justify-content: center;
@@ -407,8 +414,9 @@
         width: 20vw;
     } 
 
-    /*Santa -----------------------------------------------------------*/
-        #santaLegs {
+    /* Extraterrestrial */
+    /*-----------------------------------------------------------------*/
+    #santaLegs {
         position: relative;
         justify-content: center;
         z-index: 4; 
@@ -417,9 +425,9 @@
         width: 100%;
         height: 200%;
         transform: rotate(180deg);
-        }
-
-        #santaArms {
+    }
+    
+    #santaArms {
         position: relative;
         justify-content: center;
         z-index: 4;
@@ -428,7 +436,7 @@
         bottom: 210%;
         width: 100%;
         height: 150%;
-        }
+    }
     /*-----------------------------------------------------------------*/
 /*---------------------------------------------------------------------*/
 
